--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,10 @@
 buildscript {
     ext.kotlin_version = '1.3.61'
     repositories {
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
@@ -17,6 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
