--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,10 +3,11 @@
         package="solarapp.android.integral.com.solarapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-feature
             android:name="camera"
             android:required="true" />
+
 
     <application
             android:allowBackup="true"
@@ -16,11 +17,13 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".ImageSelectionActivity">
+        <activity android:name=".MyLocationActivity">
 
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".DashboardActivity">
 
+        </activity>
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,18 +31,18 @@
             </intent-filter>
 
         </activity>
+        <activity android:name=".ImageSelectionActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".RegisterActivity"></activity>
 
         <provider
                 android:name="androidx.core.content.FileProvider"
                 android:authorities="solarapp.android.integral.com.solarapp.fileprovider"
                 android:exported="false"
                 android:grantUriPermissions="true">
-
             <meta-data
                     android:name="android.support.FILE_PROVIDER_PATHS"
                     android:resource="@xml/file_paths" />
-
-
         </provider>
     </application>
 
